Cambios en Ejercicio CV e implementacion ejercicios Javascript

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -24,14 +24,14 @@
             <div class="content">
                 <section>
                     <h1>Contacto</h1>
-                    <ol class="lista">
+                    <ol class="list">
                         <li>Celular: 1234567890</li>
                         <li>Correo: cosmefulanito@gmail.com</li>
                     </ol> 
                 </section>
                 <section>
                     <h1>Links</h1>
-                    <ol class="lista">
+                    <ol class="list">
                         <li><a href="https://www.linkedin.com/">Linkedin</a></li>
                         <li><a href="https://github.com/">Github</a></li>
                         <li><a href="https://about.gitlab.com/">Gitlab</a></li>
@@ -39,7 +39,7 @@
                     </section>
                 <section>
                     <h1>Conocimientos</h1>
-                    <ol class="lista">
+                    <ol class="list">
                         <li>HTML,CSS,JS: Avanzado</li>
                         <li>React: Intermedio</li>
                         <li>SQL: Intermedio</li>
